--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>ssf</title><script defer="defer" src="/js/chunk-vendors.f129d11a.js"></script><script defer="defer" src="/js/app.a84d3632.js"></script><link href="/css/app.977e1249.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but ssf doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!doctype html>
+<html lang="">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="/logo.svg">
+    <title>Software Share Festival</title>
+    <script defer="defer" src="/js/chunk-vendors.f129d11a.js"></script>
+    <script defer="defer" src="/js/app.a84d3632.js"></script>
+    <link href="/css/app.977e1249.css" rel="stylesheet">
+</head>
+
+<body><noscript><strong>We're sorry but ssf doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong></noscript>
+    <div id="app"></div>
+</body>
+
+</html>
